# VaneEngine

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Makefile  README.md  VaneWorkspace.sln  premake5.lua  tasks.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  premake.yml
Sandbox/: CMakeLists.txt  Makefile  Sandbox.cmake  Sandbox.vcxproj  main.cpp  premake5.lua
Vane/: CMakeLists.txt  EntryPoint.hpp  GameTypes.hpp  Makefile  Vane.vcxproj  Vane.vcxproj.filters  entry.cpp  entry.h  premake5.lua
Vane/Config/: Config.hpp
Vane/Core/: Allocator.hpp  Application.cpp  Application.h  Application.hpp  Asserts.h  Asserts.hpp  Defines.h  Defines.hpp  Logger.cpp  Logger.h  Logger.hpp  Memory.cpp  Memory.hpp
Vane/Core/Memory/: DoubleBufferedAllocator.cpp  DoubleBufferedAllocator.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  MemUtil.cpp  MemUtil.h  MemUtil.hpp  MemoryArena.cpp  MemoryArena.hpp  MemoryManager.cpp  MemoryManager.hpp  ObjectHandle.cpp  ObjectHandle.hpp  StackAllocator.cpp  StackAllocator.hpp
Vane/Platform/: Platform.h  Platform.hpp  Platform_Linux.cpp  Platform_Linux.h  Platform_Win32.cpp  Platform_Win32.h
Vane/Vane/: EntryPoint.hpp
Vane/Vane/Config/: CVar.cpp  CVar.hpp  CVarRegistry.hpp  Config.cpp  Config.hpp  ICVar.hpp
Vane/Vane/Core/: Application.cpp  Application.hpp  Asserts.hpp  Defines.hpp  Filesystem.cpp  Filesystem.hpp  Logger.cpp  Logger.hpp
Vane/Vane/Core/Benchmarks/: MemoryBenchmark.cpp  MemoryBenchmark.hpp
Vane/Vane/Core/Containers/: DoublyLinkedList.hpp  DoublyLinkedListImpl.hpp  SinglyLinkedList.hpp  SinglyLinkedListImpl.hpp  StackLinkedList.hpp  StackLinkedListImpl.hpp
Vane/Vane/Core/Mem/: Allocator.hpp  CAllocator.cpp  CAllocator.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  MemUtils.hpp  MemoryManager.cpp  MemoryManager.hpp  StackAllocator.cpp  StackAllocator.hpp
Vane/Vane/Core/Memory/: DoubleBufferedAllocator.cpp  DoubleBufferedAllocator.hpp  FreeListAllocator.cpp  FreeListAllocator.hpp  MemUtil.cpp  MemUtil.hpp  MemoryArena.cpp  MemoryArena.hpp  MemoryManager.cpp  MemoryManager.hpp  ObjectHandle.cpp  ObjectHandle.hpp  StackAllocator.cpp  StackAllocator.hpp
Vane/Vane/Platform/: Platform.hpp  Platform_Linux.cpp  Platform_Win32.cpp
Vane/Vane/Utils/: sid.hpp
VaneEditor/: CMakeLists.txt  Makefile  VaneEditor.cmake  VaneEditor.vcxproj  main.cpp  premake5.lua  window.hxx
build-objs/dbg-linux-x64/Sandbox/: main.d
build-objs/dbg-linux-x64/Vane/: Application.d  Logger.d  Platform_Linux.d  Platform_Win32.d  entry.d
build-objs/dbg-linux-x64/VaneEditor/: main.d  window.d
cmake/: .cmake-format.yaml  VSWhere.cmake  Windows.Clang.toolchain.cmake  Windows.EWDK.toolchain.cmake  Windows.Kits.cmake  Windows.MSVC.toolchain.cmake  analyze.ps1  azure-pipelines.yml
include/: types.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/Engine/: CMakeLists.txt  Engine.cpp  EngineConfig.cpp
src/Engine/include/: Engine.h  EngineConfig.h
src/Renderer/: CMakeLists.txt  DX11Renderer.cpp  DX12Renderer.cpp  DirectXRenderer.cpp  GLRenderer.cpp  OpenGLRenderer.cpp  VKRenderer.cpp  Window.cpp
src/Renderer/include/: DX11Renderer.h  DirectXRenderer.h  GLRenderer.h  OpenGLRenderer.h  Renderer.h  Window.h
